--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,9 +24,6 @@
 
 <div class="row text-center">
   <div class="col">
-    <app-hijo
-      [contador]="contador"
-      (emitContador)="contador = $event"
-    ></app-hijo>
+    <app-hijo></app-hijo>
   </div>
 </div>
