--- a/src/app/contador/hijo/hijo.component.html
+++ b/src/app/contador/hijo/hijo.component.html
@@ -3,15 +3,17 @@
 
 <div class="row text-center">
   <div class="col">
-      <button class="btn btn-primary button" (click)="multiplicar()">Multiplicar</button>
-      <button class="btn btn-info" (click)="dividir()">Dividir</button>
+    <button class="btn btn-primary button" (click)="multiplicar()">
+      Multiplicar
+    </button>
+    <button class="btn btn-info" (click)="dividir()">Dividir</button>
   </div>
 </div>
 
-<hr>
+<hr />
 
 <div class="row text-center">
-    <div class="col">
-        <app-nieto [contador]="contador" (emitContador)="resetNieto($event)"></app-nieto>
-    </div>
+  <div class="col">
+    <app-nieto></app-nieto>
+  </div>
 </div>
